tests/baselines/reference/recursiveBaseCheck2.errors.txt
recursiveBaseCheck2.ts(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
recursiveBaseCheck2.ts(1,22): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
recursiveBaseCheck2.ts(1,32): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
recursiveBaseCheck2.ts(2,18): error TS2506: 'b2CircleShape' is referenced directly or indirectly in its own base expression.
recursiveBaseCheck2.ts(4,18): error TS2506: 'b2Shape' is referenced directly or indirectly in its own base expression.
recursiveBaseCheck2.ts(7,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
recursiveBaseCheck2.ts(7,22): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== recursiveBaseCheck2.ts (7 errors) ====
    declare module Box2D.Collision.Shapes {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                         ~~~~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                                   ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class b2CircleShape extends b2Shape {
                     ~~~~~~~~~~~~~
!!! error TS2506: 'b2CircleShape' is referenced directly or indirectly in its own base expression.
        }
        export class b2Shape extends Box2D.Collision.Shapes.b2CircleShape {
                     ~~~~~~~
!!! error TS2506: 'b2Shape' is referenced directly or indirectly in its own base expression.
        }
    }
    declare module Box2D.Dynamics {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                         ~~~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class b2ContactListener extends Box2D.Collision.Shapes.b2Shape {
        }
        export class b2FixtureDef extends Box2D.Dynamics.b2ContactListener {
        }
    }
    